# p2pchat

./: .gitignore  CMakeLists.txt  README.md
src/: chat.cpp  chat.h  client.cpp  client.h  main.cpp  myip.hpp  peer.cpp  peer.h  utils.cpp  utils.h
